--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -11,6 +11,10 @@ h1 {
 	font-size: 60px;
 	margin: auto;
 	text-align: center;
+
+	@media screen and (max-width: 500px) {
+			font-size: 36px;
+		}
 }
 
 p {
@@ -18,6 +22,11 @@ p {
 	line-height: 30px;
 	margin: 0;
 	padding: 0;
+
+	@media screen and (max-width: 500px) {
+			font-size: 14px;
+			line-height: 20px;
+		}
 }
 
 #header {
@@ -55,8 +64,16 @@ p {
 	padding: 50px 10px;
 	text-align: center;
 
+	@media screen and (max-width: 500px) {
+		padding: 30px 10px;
+	}
+
 	h1 {
 		margin-bottom: 25px;
+
+		@media screen and (max-width: 500px) {
+			margin-bottom: 15px;
+		}
 	}
 }
 
@@ -71,8 +88,12 @@ p {
 	color: #fff;
 	background: url('../images/ms_photo.jpg') no-repeat top center fixed;
 	background-size: cover;
-	height: 500px;
-	padding-top: 150px;
+	height: 300px;
+	padding-top: 75px;
+
+	@media screen and (max-width: 500px) {
+		padding-top: 40px;
+	}
 
 	h1 {
 		color: #fff;
@@ -81,5 +102,9 @@ p {
 	p {
 		width: 75%;
 		margin: auto;
+
+		@media screen and (max-width: 500px) {
+			width: 85%;
+		}
 	}
 }
